# mycobot_ros

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CHANGELOG.rst  CHNAGE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  READMECN.md  READMECN.md.txt  READMEcn.md  debug_1.py  docker-compose.yml  package.xml  setup.cfg  setup.py  test.py
CobotX/cobotx_a450/: CMakeLists.txt  package.xml
CobotX/cobotx_a450/config/: cobotx_a450.rviz
CobotX/cobotx_a450/launch/: detect_marker.launch  mycobot_follow.launch  simple_gui.launch  slider_control.launch  teleop_keyboard.launch  test.launch
CobotX/cobotx_a450/scripts/: follow_display.py  listen_real_of_topic.py  simple_gui.py  slider_control.py  teleop_keyboard.py
myArm/myarm/: CMakeLists.txt  package.xml
myArm/myarm/config/: myarm.rviz
myArm/myarm/launch/: detect_marker.launch  mycobot_follow.launch  simple_gui.launch  slider_control.launch  teleop_keyboard.launch  test.launch
myArm/myarm/scripts/: follow_display.py  following_marker.py  listen_real.py  listen_real_of_topic.py  simple_gui.py  slider_control.py  teleop_keyboard.py
myArm/myarm_c650/: CMakeLists.txt  package.xml
myArm/myarm_c650/config/: myarm.rviz  myarm_c650.rviz
myArm/myarm_c650/launch/: detect_marker.launch  detect_marker_with_topic.launch  mycobot_follow.launch  slider_control.launch  test.launch
myArm/myarm_c650/scripts/: debug.py  follow_and_pump.py  follow_display.py  listen_real.py  simple_gui.py  slider_control.py  teleop_keyboard.py  test.py
mycobot_280/mycobot_280_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_280/mycobot_280_gripper_moveit/config/: fake_controllers.yaml  firefighter.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml
mycobot_280/mycobot_280_gripper_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  mycobot_moveit.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
mycobot_280/mycobot_280_gripper_moveit/scripts/: sync_plan.py
mycobot_280/mycobot_280jn_moveit/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_280/mycobot_280jn_moveit/config/: fake_controllers.yaml  firefighter.srdf  gazebo_firefighter.urdf  ompl_planning.yaml
mycobot_280/mycobot_280jn_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  firefighter_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  moveit_rviz.launch  mycobot_moveit.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
mycobot_280/mycobot_280jn_moveit/scripts/: sync_plan.py
mycobot_320/mycobot_320/: CMakeLists.txt  package.xml
mycobot_320/mycobot_320/config/: mycobot_320.rviz  mycobot_320_gripper.rviz
mycobot_320/mycobot_320/launch/: mycobot_320_detect_marker.launch  mycobot_320_detect_marker_with_topic.launch  mycobot_320_follow_display.launch  mycobot_320_gripper_slider.launch  mycobot_320_gripper_test.launch  mycobot_320_simple_gui.launch  mycobot_320_slider.launch  mycobot_320_teleop_keyboard.launch
mycobot_320/mycobot_320/scripts/: mycobot_320_detect_marker.py  mycobot_320_follow_display.py  mycobot_320_following_marker.py  mycobot_320_gripper_slider.py  mycobot_320_simple_gui.py  mycobot_320_slider.py  mycobot_320_teleop_keyboard.py
mycobot_320/mycobot_320/src/: opencv_camera.cpp
mycobot_320/new_mycobot_320_moveit/: CMakeLists.txt  package.xml
mycobot_320/new_mycobot_320_moveit/config/: firefighter.srdf
mycobot_320/new_mycobot_320_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  firefighter_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  mycobot320_moveit.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
mycobot_320/new_mycobot_320_moveit/scripts/: sync_plan.py
mycobot_320/new_mycobot_320_pi_moveit/: CMakeLists.txt  package.xml
mycobot_320/new_mycobot_320_pi_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  firefighter_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  mycobot320_moveit.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
mycobot_320/new_mycobot_320_pi_moveit/scripts/: path_planning_and_obstacle_avoidance_demo.py  sync_plan.py
mycobot_pro/mycobot_630_moveit_three_grip/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_pro/mycobot_630_moveit_three_grip/config/: firefighter.srdf  gazebo_firefighter.urdf  simple_moveit_controllers.yaml  stomp_planning.yaml
mycobot_pro/mycobot_630_moveit_three_grip/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  firefighter_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  (+10 more)
mypalletizer_260/mypalletizer_260_pi/: CMakeLists.txt  package.xml
(+2124 files in other folders)
