<?xml version="1.0"?>
<package format="2">
  <name>myCobotROS</name>
  <version>0.1.0</version>
  <description>The myCobotROS package</description>

  <maintainer email="lijun.zhang@elephantrobotics.com">ZhangLijun</maintainer>
  <license>BSD</license>
  <url type="website"></url>
  <author email="lijun.zhang@elephantrobotics.com">ZhangLijun</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
