<?xml version="1.0"?>
<package format="2">
  <name>mypalletizer_260_pi</name>
  <version>0.0.0</version>
  <description>The mypalletizer_260_pi package</description>

 <author email="weijian.wang@elephantrobotics.com">wangweijian</author>
  <maintainer email="weijian.wang@elephantrobotics.com">wangweijian</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/elephantrobotics/mycobot_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>mycobot_description</build_depend>
  <build_depend>mypalletizer_communication</build_depend>

  <build_export_depend>mypalletizer_communication</build_export_depend>
  <build_export_depend>mycobot_description</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>python-tk</exec_depend>
  <exec_depend>mycobot_description</exec_depend>
  <exec_depend>mypalletizer_communication</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
